# ctf-attackapi

./: .gitignore  Dockerfile  LICENSE.txt  README.md  api.yaml  compose.yaml  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
examples/: basic.py  basic_async.py  full.py  simple_async.py
src/ad_ctf_apis/: __init__.py  functional.py  models.py  sync_api.py
src/ad_ctf_apis/async_api/: __init__.py  api.py  decoders.py
src/ad_ctf_apis/server/: __init__.py  __main__.py  docs.py  server.py
src/attackapi/: __init__.py  functional.py  models.py  sync_api.py
src/attackapi/async_api/: __init__.py  api.py  decoders.py  filelock.py
src/attackapi/server/: __main__.py  server.py  worker.py
tests/: test_api.py  test_decoder.py  test_locks.py  test_server.py  test_sync_api.py  utils.py
tests/res/: enowars9.json  faust2024.json  saarctf2025.json
