[project]
name = "ctf-attackapi"
version = "0.1.0"
description = "Get attack infos in attack-defense CTFs quickly to your exploits. CTF-agnostic and cached."
readme = "README.md"
license = "MIT"
license_files = ["LICENSE.txt"]
keywords = ["Attack-Defense", "CTF", "Attack API", "Attack Info", "Flag IDs", "FaustCTF", "ENOwars", "saarCTF"]
authors = [
    { name = "Markus Bauer", email = "markus.bauer@cispa.saarland" }
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.13.3",
    "aiologic>=0.16.0",
    "filelock>=3.19.1",
    "pyyaml>=6.0.3",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
server = [
    "gunicorn>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/Attacking-Lab/ctf-attackapi"
Repository = "https://github.com/Attacking-Lab/ctf-attackapi"
Issues = "https://github.com/Attacking-Lab/ctf-attackapi/issues"
Background = "https://wiki.attacking-lab.com/attack-defense/"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
ctf-attackapi-server = "attackapi.server:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.uv.build-backend]
module-name = "attackapi"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
packages = ["attackapi", "tests", "examples"]
mypy_path = ["./src", "./tests", "./examples"]
